[package]
name = "backendGitSecrets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.14.4"
once_cell = "1.12.0"
regex = "1.5.6"
paris = "1.5.13"
clap = { versoion="3.2.12", features=['cargo'] }

[features]
clap = ["clap/cargo"]
